@@ -1,6 +1,7 @@
 package ru.gymanager.server.service.impl;
 
 import javax.xml.bind.ValidationException;
+
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -11,9 +12,8 @@ import org.springframework.transaction.annotation.Transactional;
 import ru.gymanager.server.dto.UserInfoDto;
 import ru.gymanager.server.exception.BadRequestException;
 import ru.gymanager.server.mapper.UserMapper;
-import ru.gymanager.server.model.Role;
+import ru.gymanager.server.model.RoleEntity;
 import ru.gymanager.server.model.UserEntity;
-import ru.gymanager.server.dto.UserCreationDto;
 import ru.gymanager.server.repository.RoleRepository;
 import ru.gymanager.server.repository.UserRepository;
 import ru.gymanager.server.service.RoleService;
@@ -42,14 +42,11 @@ public class UserServiceImpl implements UserService, RoleService {
 
     @Override
     public Optional<UserEntity> getUserByLogin(String login) {
-        if (StringUtils.isBlank(login)) {
-            return null;
-        }
         return userRepository.findByLogin(login);
     }
 
     @Override
-    public UserEntity createUser(UserCreationDto userDto) {
+    public UserEntity createUser(UserInfoDto userDto) {
         Optional<UserEntity> check = userRepository.findByLogin(userDto.getLogin());
         if (check.isPresent()) {
             return check.get();
@@ -63,16 +60,29 @@ public class UserServiceImpl implements UserService, RoleService {
     @Override
     @Transactional
     public UserEntity updateUser(UserInfoDto updateDto) {
-        UserEntity user = findAndValidateUser(updateDto.getLogin());
-        if (!updateDto.getFirstName().isBlank()) {
+        UserEntity user = findAndValidateUserById(updateDto.getId());
+        if (!StringUtils.isBlank(updateDto.getLogin())) {
+            user.setLogin(updateDto.getLogin());
+        }
+        if (!StringUtils.isBlank(updateDto.getFirstName())) {
             user.setFirstName(updateDto.getFirstName());
         }
-        if (!updateDto.getMiddleName().isBlank()) {
+        if (!StringUtils.isBlank(updateDto.getMiddleName())) {
             user.setMiddleName(updateDto.getMiddleName());
-        }if (!updateDto.getLastName().isBlank()) {
+        }
+        if (!StringUtils.isBlank(updateDto.getLastName())) {
             user.setLastName(updateDto.getLastName());
         }
-
+        if (!StringUtils.isBlank(updateDto.getPassword())) {
+            log.warn("Change password foe user login={}", user.getLogin());
+            user.setPassword(passwordEncoder.encode(updateDto.getPassword()));
+        }
+        if (!StringUtils.isBlank(updateDto.getPhone())) {
+            user.setPhone(updateDto.getPhone());
+        }
+        if (!StringUtils.isBlank(updateDto.getEmail())) {
+            user.setEmail(updateDto.getEmail());
+        }
         return user;
     }
 
@@ -82,59 +92,59 @@ public class UserServiceImpl implements UserService, RoleService {
     }
 
     @Override
-    public List<Role> getAllRoles() {
+    public List<RoleEntity> getAllRoles() {
         return roleRepository.findAll();
     }
 
     @Override
-    public Role createRole(String roleName) throws ValidationException {
+    public RoleEntity createRole(String roleName) throws ValidationException {
         if (StringUtils.isBlank(roleName)) {
             throw new ValidationException("Role name is empty!");
         }
-        Optional<Role> check = roleRepository.findByName(roleName);
+        Optional<RoleEntity> check = roleRepository.findByRole(RoleEntity.Role.valueOf(roleName));
         if (check.isPresent()) {
             return check.get();
         }
-        Role role = new Role(roleName);
+        RoleEntity role = new RoleEntity(roleName);
         return roleRepository.save(role);
     }
 
     @Override
-    public void setRoleToUser(String userLogin, String roleName) {
-        UserEntity user = findAndValidateUser(userLogin);
-        if (user.getRoles().stream().anyMatch(role -> StringUtils.equals(roleName, role.getName()))) {
+    @Transactional
+    public void setRoleToUser(String userId, String roleName) {
+        UserEntity user = findAndValidateUserById(userId);
+        if (user.getRoles().stream().anyMatch(role -> StringUtils.equals(roleName, role.getRole().name()))) {
             return;
         }
 
-        Role role = findAndValidateRole(roleName);
+        RoleEntity role = findAndValidateRole(roleName);
         user.getRoles().add(role);
-        log.warn("Set role {} to user (login={})", roleName, userLogin);
+        log.warn("Set role {} to user (login={})", roleName, user.getLogin());
     }
 
     @Override
     @Transactional
-    public UserEntity deleteRoleFromUser(String userLogin, String roleName) {
-        UserEntity user = findAndValidateUser(userLogin);
+    public void deleteRoleFromUser(String userId, String roleName) {
+        UserEntity user = findAndValidateUserById(userId);
         log.info("User found with id={}", user.getId());
-        Role role = findAndValidateRole(roleName);
+        RoleEntity role = findAndValidateRole(roleName);
         if (!user.getRoles().contains(role)) {
-            log.warn("User (id={}) don't have role={}", userLogin, roleName);
+            log.warn("User (id={}) don't have role={}", user.getLogin(), roleName);
             throw new BadRequestException("This user don't have this role");
         }
         user.getRoles().remove(role);
-        return user;
     }
 
-    private UserEntity findAndValidateUser(String login) {
-        Optional<UserEntity> user = userRepository.findByLogin(login);
+    private UserEntity findAndValidateUserById(String id) {
+        Optional<UserEntity> user = userRepository.findById(id);
         if (user.isEmpty()) {
-            throw new NotFoundException("User with login " + login + " not found!");
+            throw new NotFoundException("User with id " + id + " not found!");
         }
         return user.get();
     }
 
-    private Role findAndValidateRole(String roleName) {
-        Optional<Role> role = roleRepository.findByName(roleName);
+    private RoleEntity findAndValidateRole(String roleName) {
+        Optional<RoleEntity> role = roleRepository.findByRole(RoleEntity.Role.valueOf(roleName));
         if (role.isEmpty()) {
             throw new NotFoundException("Role with name " + roleName + " not found!");
         }
